--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
+                <version>3.6.0</version>
                 <configuration>
                     <source>11</source>
                     <target>11</target>
@@ -103,6 +103,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>1.5.6.RELEASE</version>
                 <configuration>
                     <skip>${skipStandalone}</skip>
                 </configuration>
