--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,14 @@
     <name>zero-io</name>
     <description>IO Library for Business</description>
 
+    <parent>
+        <groupId>com.jfeat</groupId>
+        <artifactId>sb-parent</artifactId>
+        <version>1.0.0</version>
+        <relativePath/>
+    </parent>
+
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <skipStandalone>false</skipStandalone>
@@ -103,7 +111,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>1.5.6.RELEASE</version>
                 <configuration>
                     <skip>${skipStandalone}</skip>
                 </configuration>
