--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>zero-io</module>
         <module>pdf-export</module>
         <module>excel-export</module>
+        <module>zero-upload</module>
     </modules>
 
 
