--- a/zero-io/pom.xml
+++ b/zero-io/pom.xml
@@ -41,6 +41,10 @@
             <artifactId>crud-base</artifactId>
             <version>${crud-base.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/cn.hutool/hutool-core -->
         <dependency>
