PDF打印-增加文件形式存放模版的实体类字段

--- a/pdf-export/pom.xml
+++ b/pdf-export/pom.xml
@@ -52,6 +52,10 @@
             <artifactId>zero-io</artifactId>
             <version>${zero-io.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
 
     </dependencies>
 
