--- a/zero-io/pom.xml
+++ b/zero-io/pom.xml
@@ -36,11 +36,11 @@
             <artifactId>spring-web</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.6</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>mysql</groupId>-->
+<!--            <artifactId>mysql-connector-java</artifactId>-->
+<!--            <version>5.1.6</version>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>com.jfeat</groupId>
