--- a/pdf-api/pom.xml
+++ b/pdf-api/pom.xml
@@ -11,7 +11,7 @@
 
     <parent>
         <groupId>com.jfeat</groupId>
-        <artifactId>sb-parent</artifactId>
+        <artifactId>zero-io-pom</artifactId>
         <version>1.0.0</version>
         <relativePath/>
     </parent>
@@ -19,7 +19,7 @@
     <properties>
         <skipStandalone>false</skipStandalone>
         <crud-dev.version>0.0.1</crud-dev.version>
-        <zero-io.version>0.0.3</zero-io.version>
+        <zero-io-core.version>0.0.4</zero-io-core.version>
         <crud-plus.version>0.0.6</crud-plus.version>
         <crud-core.version>0.0.2</crud-core.version>
     </properties>
@@ -41,23 +41,12 @@
             <artifactId>crud-plus</artifactId>
             <version>${crud-plus.version}</version>
         </dependency>
-
-        <!--        <dependency>-->
-        <!--            <groupId>org.springframework.boot</groupId>-->
-        <!--            <artifactId>spring-boot-starter-undertow</artifactId>-->
-        <!--        </dependency>-->
-
         <dependency>
             <groupId>com.jfeat</groupId>
-            <artifactId>zero-io</artifactId>
-            <version>${zero-io.version}</version>
+            <artifactId>zero-io-core</artifactId>
+            <version>${zero-io-core.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.12</version>
-            <scope>provided</scope>
-        </dependency>
+
 
     </dependencies>
 
