--- a/pom.xml
+++ b/pom.xml
@@ -18,11 +18,27 @@
         <relativePath/>
     </parent>
 
+    <properties>
+        <lombok.version>1.18.12</lombok.version>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
+
     <modules>
-        <module>zero-io</module>
+        <module>zero-io-core</module>
         <module>excel-api</module>
         <module>pdf-api</module>
+        <module>zero-io-common</module>
     </modules>
+
+
 
 
 </project>
