--- a/pom.xml
+++ b/pom.xml
@@ -33,8 +33,8 @@
 
     <modules>
         <module>zero-io-core</module>
-        <module>excel-api</module>
-        <module>pdf-api</module>
+        <module>zero-io-excel</module>
+        <module>zero-io-pdf</module>
         <module>zero-io-common</module>
     </modules>
 
