--- a/zero-io-excel/pom.xml
+++ b/zero-io-excel/pom.xml
@@ -2,19 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
-    <modelVersion>4.0.0</modelVersion>
-
-    <groupId>com.jfeat</groupId>
-    <artifactId>pdf-api</artifactId>
-    <version>1.1.0</version>
-
     <parent>
         <groupId>com.jfeat</groupId>
         <artifactId>zero-io-pom</artifactId>
         <version>1.0.0</version>
         <relativePath/>
     </parent>
+    <modelVersion>4.0.0</modelVersion>
+
+    <groupId>com.jfeat</groupId>
+    <artifactId>zero-io-excel</artifactId>
+    <version>1.1.0</version>
 
     <properties>
         <skipStandalone>false</skipStandalone>
@@ -41,13 +39,28 @@
             <artifactId>crud-plus</artifactId>
             <version>${crud-plus.version}</version>
         </dependency>
+
         <dependency>
             <groupId>com.jfeat</groupId>
             <artifactId>zero-io-core</artifactId>
             <version>${zero-io-core.version}</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>cn.afterturn</groupId>
+            <artifactId>easypoi-base</artifactId>
+            <version>4.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.afterturn</groupId>
+            <artifactId>easypoi-web</artifactId>
+            <version>4.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.afterturn</groupId>
+            <artifactId>easypoi-annotation</artifactId>
+            <version>4.1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -84,7 +97,6 @@
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.1.2</version>
             </plugin>
-
 
             <plugin>
                 <groupId>com.github.kongchen</groupId>
