--- a/zero-io-excel/pom.xml
+++ b/zero-io-excel/pom.xml
@@ -49,6 +49,12 @@
         <dependency>
             <groupId>cn.afterturn</groupId>
             <artifactId>easypoi-base</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
+            </exclusions>
             <version>4.1.0</version>
         </dependency>
         <dependency>
