--- a/zero-io-all/src/main/resources/application.yml
+++ b/zero-io-all/src/main/resources/application.yml
@@ -44,12 +44,5 @@ mybatis-plus:
 ---
 io:
   excel:
-    template-directory: "excel-templates"
-    export-map:
-      equipment:
-        api: "http://39.108.14.206:8070/api/adm/equipment/equipments"
-        template-name: "equipment.xlsx"
-    import-map:
-      equipment:
-        template-name: "equipment.json"
+    template-dir: "excel-templates"
 
