--- a/zero-io-excel/pom.xml
+++ b/zero-io-excel/pom.xml
@@ -15,7 +15,7 @@
     <version>1.1.0</version>
 
     <properties>
-        <skipStandalone>false</skipStandalone>
+        <skipStandalone>true</skipStandalone>
         <crud-dev.version>0.0.1</crud-dev.version>
         <zero-io-core.version>0.0.4</zero-io-core.version>
         <crud-plus.version>0.0.6</crud-plus.version>
@@ -34,6 +34,7 @@
             <groupId>com.jfeat</groupId>
             <artifactId>crud-dev</artifactId>
             <version>${crud-dev.version}</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
