--- a/zero-io-pdf/pom.xml
+++ b/zero-io-pdf/pom.xml
@@ -17,7 +17,7 @@
     </parent>
 
     <properties>
-        <skipStandalone>false</skipStandalone>
+        <skipStandalone>true</skipStandalone>
         <crud-dev.version>0.0.1</crud-dev.version>
         <zero-io-core.version>0.0.4</zero-io-core.version>
         <crud-plus.version>0.0.6</crud-plus.version>
@@ -29,6 +29,7 @@
             <groupId>com.jfeat</groupId>
             <artifactId>crud-dev</artifactId>
             <version>${crud-dev.version}</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
