--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <module>zero-io-core</module>
         <module>zero-io-excel</module>
         <module>zero-io-pdf</module>
+        <module>zero-io-fs</module>
         <module>zero-io-common</module>
         <module>zero-io-all</module>
     </modules>
