--- a/zero-io-pdf/pom.xml
+++ b/zero-io-pdf/pom.xml
@@ -5,7 +5,6 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.jfeat</groupId>
     <artifactId>zero-io-pdf</artifactId>
     <version>1.1.0</version>
 
@@ -22,6 +21,8 @@
         <zero-io-core.version>0.0.4</zero-io-core.version>
         <crud-plus.version>0.1.0</crud-plus.version>
         <crud-core.version>0.0.5</crud-core.version>
+        <lombok.version>1.18.12</lombok.version>
+        <hutool-core.version>5.2.5</hutool-core.version>
     </properties>
 
     <dependencies>
@@ -48,6 +49,12 @@
             <version>${zero-io-core.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
+        </dependency>
 
     </dependencies>
 
