--- a/zero-io-all/pom.xml
+++ b/zero-io-all/pom.xml
@@ -22,7 +22,7 @@
        -->
 
     <properties>
-        <skipStandalone>true</skipStandalone>
+        <skipStandalone>false</skipStandalone>
     </properties>
 
     <dependencies>
