--- a/zero-io-pdf/pom.xml
+++ b/zero-io-pdf/pom.xml
@@ -5,6 +5,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>com.jfeat</groupId>
     <artifactId>zero-io-pdf</artifactId>
     <version>1.1.0</version>
 
@@ -16,13 +17,11 @@
     </parent>
 
     <properties>
-        <skipStandalone>true</skipStandalone>
+        <skipStandalone>false</skipStandalone>
         <crud-dev.version>0.0.2</crud-dev.version>
         <zero-io-core.version>0.0.4</zero-io-core.version>
         <crud-plus.version>0.1.0</crud-plus.version>
         <crud-core.version>0.0.5</crud-core.version>
-        <lombok.version>1.18.12</lombok.version>
-        <hutool-core.version>5.2.5</hutool-core.version>
     </properties>
 
     <dependencies>
@@ -49,12 +48,6 @@
             <version>${zero-io-core.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>${lombok.version}</version>
-            <scope>provided</scope>
-        </dependency>
 
     </dependencies>
 
