--- a/zero-io-pdf/src/main/resources/application.yml
+++ b/zero-io-pdf/src/main/resources/application.yml
@@ -26,7 +26,7 @@ getUrl:
 
 ###################  项目启动端口  ###################
 server:
-  port: 8080
+  port: 8081
   ssl:
     enabled: false
     key-store: classpath:sb.keystore
@@ -121,7 +121,7 @@ spring:
   datasource:
     #      url: jdbc:mysql://120.79.77.207:3306/power?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
     #url: jdbc:mysql://192.168.2.122:3306/smartsee?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
-    url: jdbc:mysql://127.0.0.1:3306/test?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
+    url: jdbc:mysql://127.0.0.1:3307/coop?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
     username: root
     password: root
     filters: log4j,wall,mergeStat
