--- a/zero-io-pdf/src/main/resources/application.yml
+++ b/zero-io-pdf/src/main/resources/application.yml
@@ -121,9 +121,9 @@ spring:
   datasource:
     #      url: jdbc:mysql://120.79.77.207:3306/power?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
     #url: jdbc:mysql://192.168.2.122:3306/smartsee?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
-    url: jdbc:mysql://127.0.0.1:3307/coop?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
+    url: jdbc:mysql://127.0.0.1:3306/datax?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
     username: root
-    password: root
+    password: 123456
     filters: log4j,wall,mergeStat
     schema: classpath*:sql/**/*-schema.sql
     data: classpath*:sql/**/*-data.sql
