Added Bucket concept and API for creating associated directories.

--- a/zero-io-fs/src/main/resources/application.yml
+++ b/zero-io-fs/src/main/resources/application.yml
@@ -12,3 +12,7 @@ spring:
 io:
   fileUploadPath: "/attachments"
   fileHost: "/attachments"
+
+bucket:
+  appId: 32791238237612378123
+  appKey: "EF8WnIPlnDFYPEIt"
