--- a/zero-io-fs/pom.xml
+++ b/zero-io-fs/pom.xml
@@ -24,13 +24,13 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.12</version>
-            <scope>provided</scope>
+<!--            <scope>provided</scope>-->
         </dependency>
 
         <dependency>
             <groupId>com.jfeat</groupId>
             <artifactId>crud-base</artifactId>
-            <version>${crud-base.version}</version>
+            <version>0.0.2</version>
         </dependency>
 
         <dependency>
@@ -42,13 +42,13 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>${commons-io.version}</version>
+            <version>2.5</version>
         </dependency>
 
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>${fastjson.version}</version>
+            <version>1.2.52</version>
         </dependency>
 
         <dependency>
