--- a/zero-io-fs/pom.xml
+++ b/zero-io-fs/pom.xml
@@ -24,7 +24,7 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.12</version>
-<!--            <scope>provided</scope>-->
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
