--- a/zero-io-excel/pom.xml
+++ b/zero-io-excel/pom.xml
@@ -29,6 +29,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.194</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
@@ -85,12 +91,11 @@
         </dependency>
 
         <!--引用报表模块-->
-        <!--<dependency>
+        <dependency>
             <groupId>com.jfeat</groupId>
             <artifactId>statistic</artifactId>
-            <version>1.0.1</version>
-            <scope>provided</scope>
-        </dependency>-->
+            <version>1.3.0</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -168,6 +173,7 @@
                 <directory>src/main/resources</directory>
                 <excludes>
                     <exclude>**/h2/*</exclude>
+                    <exclude>**/excel-templates/*</exclude>
                 </excludes>
             </resource>
             <resource>
