--- a/zero-io-fs/pom.xml
+++ b/zero-io-fs/pom.xml
@@ -30,25 +30,25 @@
         <dependency>
             <groupId>com.jfeat</groupId>
             <artifactId>crud-base</artifactId>
-            <version>0.0.2</version>
+            <version>${crud-base.version}</version>
         </dependency>
 
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
-            <version>2.9.2</version>
+            <version>${swagger-ui.version}</version>
         </dependency>
 
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.5</version>
+            <version>${commons-io.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>1.2.52</version>
+            <version>${fastjson.version}</version>
         </dependency>
 
         <dependency>
