--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
         <module>zero-io-common</module>
         <module>zero-io-all</module>
         <module>zero-io-aliyun</module>
-
+        <module>zero-io-json</module>
     </modules>
 
 
